# 4dRendering

./: Cargo.toml  SimpleScene.scene  out.rs
app/: Cargo.toml
app/src/: camera.rs  main.rs  objects.rs
math/: Cargo.toml
math/src/: lib.rs
rendering/: Cargo.toml
rendering/shaders/: ray_tracing.wgsl
rendering/src/: lib.rs  objects.rs  render_target.rs
