[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
cgmath = { workspace = true }
eframe = { workspace = true }
math = { workspace = true }
rendering = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.143"
slotmap = { version = "1.0.7", features = ["serde"] }

[lints]
workspace = true
